force-app/main/default/objects/User/fields/DefaultMarket__c.field-meta.xml
<CustomField>
    <fullName>DefaultMarket__c</fullName>
    <label>Default Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>