force-app/main/default/objects/User/fields/EnabledForMarkets__c.field-meta.xml
<CustomField>
    <fullName>EnabledForMarkets__c</fullName>
    <description>List of markets enabled for this user.</description>
    <label>Enabled For Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market</valueSetName>
    </valueSet>
</CustomField>