force-app/main/default/objects/User/fields/PosUserId__c.field-meta.xml
<CustomField>
      <fullName>PosUserId__c</fullName>
        <description>External Id, represents Flora user Id</description>
        <externalId>true</externalId>
        <label>PosUserId</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
</CustomField>