force-app/main/default/objects/User/fields/TF_Default_Market__c.field-meta.xml
<CustomField>
    <fullName>TF_Default_Market__c</fullName>
    <label>TF Default Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>